--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-animated-count",
   "version": "0.0.1",
-  "description": "React animated count.",
+  "description": "Animated count component for React.",
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
@@ -10,13 +10,16 @@
     "test": "mocha --compilers js:babel-register --recursive ./test/*.spec.js"
   },
   "dependencies": {
+    "react-motion": "^0.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
     "mocha": "^2.4.5",
     "npm-run-all": "^1.7.0",
+    "react": "^15.0.1",
     "rimraf": "^2.5.2",
     "should": "^8.3.0"
   },
